<resources>
    <string name="app_name">Bikr - Assignment2 (ETHZ)</string>

    <string name="headingValue">N/A</string>
    <string name="valueSpeed">N/A</string>
    <string name="height">N/A</string>
    <string name="acceleration">N/A</string>
    <string name="location">N/A</string>
    <string name="temp">N/A</string>
    <string name="recording">recording</string>
    <string name="start_recording">Start recording</string>
    <string name="stop_recording">Stop recording</string>
    <string name="nameTemperature">Temperature:</string>
    <string name="nameLocation">Location:</string>
    <string name="nameAcceleration">Acceleration:</string>
    <string name="nameHeight">Height:</string>
    <string name="nameSpeed">Speed:</string>
    <string name="headingDegree">N/A</string>
    <string name="nameHeading">Heading:</string>
    <string name="averageSpeed">N/A</string>
    <string name="centerButton">Center view</string>
    <string name="northButton">Adjust to North</string>
    <string name="proximity_text">Click notification to return to app</string>

    <!-- basemap menu items -->
    <string name="StreetMapMenu">Streets</string>
    <string name="TopoMenu">Topographic</string>
    <string name="GrayMenu">Gray</string>
    <string name="average">Average</string>
    <string name="you">You</string>
    <string name="yourTime">N/A</string>
    <string name="yourSpeed">N/A</string>
    <string name="avTime">N/A</string>
    <string name="avSpeed">N/A</string>
    <string name="trackInfo"><u>Track Info</u></string>

</resources>
